--- a/src/pages/transactions/search/search.html
+++ b/src/pages/transactions/search/search.html
@@ -144,7 +144,7 @@
               <div item-end class="item-content content-types">
                 <ion-row align-items-center>
                   <ion-col class="col-content">
-                    {{ getTypesValue(searchObj.transaction_type) }}
+                    {{ getTypesValue(searchObj.transaction_type, 'search_transaction_type') }}
                   </ion-col>
                   <ion-col class="col-arrow">
                     <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
@@ -192,7 +192,7 @@
               <div item-end class="item-content content-types">
                 <ion-row align-items-center>
                   <ion-col class="col-content">
-                    {{ getTypesValue(searchObj.billing_type) }}
+                    {{ getTypesValue(searchObj.billing_type, 'search_billing_type') }}
                   </ion-col>
                   <ion-col class="col-arrow">
                     <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
