--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -25,7 +25,7 @@
           {{ 'GENERAL.TODAY' | translate }}
         </div>
         <ng-template #notToday>
-          {{ 'TRANSACTIONS_PAGE.THIS' | translate }} <span text-capitalize>{{ 'TRANSACTIONS_PAGE.' + currentPeriod.toUpperCase() | translate }}</span>
+          <span text-capitalize>{{ 'GENERAL.THIS_' + currentPeriod.toUpperCase() | translate }}</span>
         </ng-template>
       </ion-col>
       <ion-col col-2>
@@ -59,7 +59,7 @@
         <ion-col col-12>
           <ion-item no-padding>
             <ion-label><ion-icon name="search"></ion-icon></ion-label>
-            <ion-input placeholder="Text Input" [(ngModel)]="searchInputValue" (input)="updateTransactions()"></ion-input>
+            <ion-input placeholder="{{ 'TRANSACTIONS_PAGE.TEXT_INPUT' | translate }}" [(ngModel)]="searchInputValue" (input)="updateTransactions()"></ion-input>
             <button ion-button class="btn-cancel" clear item-end (click)="showSearchInput(false)">{{ 'CANCEL' | translate }}</button>
           </ion-item>
         </ion-col>
