added highlightFields to params, added ellipsis to long words

--- a/src/pages/transactions/search/search.html
+++ b/src/pages/transactions/search/search.html
@@ -132,7 +132,7 @@
               <ion-label padding-left>
                 {{ 'SEARCH_FILTERS_PAGE.AFFILIATE' | translate}}
               </ion-label>
-              <div item-content class="item-content">
+              <div item-content class="affiliate-content">
                 {{ getAffiliateValue() }}
                 <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
               </div>
