--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -13,7 +13,7 @@
   </ion-refresher>
 
   <ion-list no-padding no-margin>
-    <button no-padding ion-item (click)="openPageParams('E-Ticket template')">
+    <button [class.empty-param]="highlightFields && !params.template.key" no-padding ion-item (click)="openPageParams('E-Ticket template')">
       <ion-label padding-left>
         {{'E_TICKET_PAGE.TEMPLATE' | translate}}
       </ion-label>
@@ -22,7 +22,7 @@
         <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
       </div>
     </button>
-    <button no-padding ion-item (click)="openPageParams('Event location')">
+    <button [class.empty-param]="highlightFields && !params.location.key" no-padding ion-item (click)="openPageParams('Event location')">
       <ion-label padding-left>
         {{'E_TICKET_PAGE.LOCATION' | translate}}
       </ion-label>
