--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -94,7 +94,7 @@
 
   <ng-template #transactionsNotFound>
     <ion-row class="transactions-not-found">
-      <ion-col col-10 offset-1>
+      <ion-col col-10 offset-1 no-padding>
         <ion-item no-lines no-padding>
           <p *ngIf="!currentPeriod">{{ 'TRANSACTIONS_PAGE.NO_RESULTS' | translate }}</p>
           <p *ngIf="currentPeriod" translate [translateParams]="{period: ('GENERAL.' + (currentPeriod == 'day' ? 'TODAY' : 'THIS_' + currentPeriod.toUpperCase()) | translate).toLowerCase() }">TRANSACTIONS_PAGE.NO_RESULTS_FOR_PERIOD</p>
