--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,96 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <style type="text/css">
+    #custom-overlay {
+      height: 100%;
+      width: 100%;
+      background: linear-gradient(45deg, #3248a1, #1998db);
+    }
+    #container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+    #logo img {
+      display: block;
+      margin: 0 auto;
+      width: 50%;
+      height: auto;
+    }
+
+    .spinner-wrapper {
+      position: absolute;
+      top: 75vh;
+      width: 100%;
+      height: 25px;
+    }
+
+    .splash-spinner {
+      margin: 0 auto;
+      width: 100px;
+      text-align: center;
+    }
+
+    .splash-spinner > div {
+      width: 18px;
+      height: 18px;
+      background-color: white;
+
+      border-radius: 100%;
+      display: inline-block;
+      -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+      animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    }
+
+    .splash-spinner .bounce1 {
+      -webkit-animation-delay: -0.32s;
+      animation-delay: -0.32s;
+    }
+
+    .bounce2 {
+      margin: 0 20px;
+    }
+
+    .splash-spinner .bounce2 {
+      -webkit-animation-delay: -0.16s;
+      animation-delay: -0.16s;
+    }
+
+    @-webkit-keyframes sk-bouncedelay {
+      0%, 80%, 100% { -webkit-transform: scale(0) }
+      40% { -webkit-transform: scale(1.0) }
+    }
+
+    @keyframes sk-bouncedelay {
+      0%, 80%, 100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+      } 40% {
+          -webkit-transform: scale(1.0);
+          transform: scale(1.0);
+        }
+    }
+  </style>
+
 </head>
 <body>
+
+  <div id="custom-overlay">
+    <div class="spinner-wrapper">
+      <div class="splash-spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
+    </div>
+    <div id="container">
+      <div id="logo">
+        <img src="assets/img/logo-square.png">
+      </div>
+    </div>
+  </div>
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app style="background: none transparent;"></ion-app>
