added mimimize & logo

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
     </div>
     <div id="container">
       <div id="logo">
-        <img src="assets/img/logo-square.png">
+        <img src="assets/img/logo-ds24-white.png">
       </div>
     </div>
   </div>
