--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -107,6 +107,6 @@
 
 </ion-content>
 
-<section class="bottom-logo">
+<section class="bottom-logo hideElementOnKeyboardShown">
   <img src="assets/img/logo-long.png">
 </section>
