--- a/src/pages/settings/language/language.html
+++ b/src/pages/settings/language/language.html
@@ -21,7 +21,7 @@
       <ion-radio mode="ios" value="en" (ionSelect)="changeLang()"></ion-radio>
     </ion-item>
     <ion-item mode="ios">
-      <ion-label>Deutch</ion-label>
+      <ion-label>Deutsch</ion-label>
       <ion-radio mode="ios" value="de" (ionSelect)="changeLang()"></ion-radio>
     </ion-item>
   </ion-list>
