PushWoosh configuration, remove getPurchase and took data from listTransactions

--- a/src/pages/transactions/transaction-details/transaction-details.html
+++ b/src/pages/transactions/transaction-details/transaction-details.html
@@ -68,11 +68,11 @@
         <ion-row align-items-center>
           <ion-col col-4>
             <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.TRANSACTION_TYPE' | translate }}</label>
-            <p>{{ transaction.type }}</p>
+            <p text-capitalize>{{ transaction.type }}</p>
           </ion-col>
           <ion-col col-4>
             <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.PAYMENT_METHOD' | translate }}</label>
-            <p>{{ transaction.method }}</p>
+            <p text-capitalize>{{ transaction.method }}</p>
           </ion-col>
           <ion-col col-4>
             <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.CURRENCY' | translate }}</label>
