Updates by Last feedback

--- a/src/pages/transactions/report-result/report-result.html
+++ b/src/pages/transactions/report-result/report-result.html
@@ -17,7 +17,7 @@
 
   <h1 margin><ion-icon color="{{status == 'error' ? 'danger' : 'secondary'}}" name="{{status == 'error' ? 'close' : 'checkmark'}}"></ion-icon></h1>
 
-  <h3 class="result-status" text-capitalize>{{status}}!</h3>
+  <h3 class="result-status" text-capitalize translate>REPORT_PAGE.{{status}}</h3>
 
   <section>
     <p class="result-message">{{message}}</p>
