--- a/src/pages/transactions/search/search.html
+++ b/src/pages/transactions/search/search.html
@@ -130,13 +130,17 @@
             <ion-row>
               <ion-col col-6>
                 <ion-item no-margin no-padding>
-                  <ion-datetime placeholder="{{ 'SEARCH_FILTERS_PAGE.START_DAY' | translate}}" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.from"></ion-datetime>
+                  <ion-datetime placeholder="{{ 'SEARCH_FILTERS_PAGE.START_DAY' | translate}}" displayFormat="YYYY-MM-DD" pickerFormat="DD MMMM YYYY"
+                                monthNames="{{months[curLang]}}"
+                                [(ngModel)]="searchObj.from"></ion-datetime>
                   <!--<ion-input formControlName="from" type="text" placeholder="Start day"></ion-input>-->
                 </ion-item>
               </ion-col>
               <ion-col col-6>
                 <ion-item no-margin no-padding>
-                  <ion-datetime placeholder="{{ 'SEARCH_FILTERS_PAGE.END_DAY' | translate}}" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.to"></ion-datetime>
+                  <ion-datetime placeholder="{{ 'SEARCH_FILTERS_PAGE.END_DAY' | translate}}" displayFormat="YYYY-MM-DD" pickerFormat="DD MMMM YYYY"
+                                monthNames="{{months[curLang]}}"
+                                [(ngModel)]="searchObj.to"></ion-datetime>
                   <!--<ion-input formControlName="to" type="text" placeholder="End day"></ion-input>-->
                 </ion-item>
               </ion-col>
