--- a/src/pages/transactions/transaction-details/transaction-details.html
+++ b/src/pages/transactions/transaction-details/transaction-details.html
@@ -55,11 +55,11 @@
         <ion-row>
           <ion-col col-6>
             <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.GROSS_AMOUNT' | translate }}</label>
-            <p>{{ transaction.currency }} {{ transaction.brutto }}</p>
+            <p>{{ +transaction.brutto | currency: transaction.currency: true }}</p>
           </ion-col>
           <ion-col col-6 >
             <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.NET_COMMISSION' | translate }}</label>
-            <p>{{ transaction.currency }} {{ transaction.netto }}</p>
+            <p>{{ +transaction.netto | currency: transaction.currency: true}}</p>
           </ion-col>
         </ion-row>
       </ion-grid>
