--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -48,7 +48,9 @@
         <button ion-button class="nav-btn" clear color="primary" (click)="sortBy()">{{ 'TRANSACTIONS_PAGE.SORT_BY' | translate }}</button>
       </ion-col>
       <ion-col col-6 text-right>
-        <button *ngIf="!currentPeriod" ion-button class="nav-btn" clear color="primary" (click)="openSearch()">{{ 'TRANSACTIONS_PAGE.SEARCH_FILTERS' | translate }}</button>
+        <button *ngIf="!currentPeriod" ion-button class="nav-btn" clear color="primary" (click)="openSearch()">
+          <ion-badge *ngIf="filterCount" class="badge margin" item-end>{{filterCount}}</ion-badge>
+          {{ 'TRANSACTIONS_PAGE.SEARCH_FILTERS' | translate }}</button>
         <button *ngIf="currentPeriod" small ion-button class="nav-btn" icon-only clear color="primary" (click)="showSearchInput(true)">
           <ion-icon name="search"></ion-icon>
         </button>
@@ -98,8 +100,11 @@
         <ion-item no-lines no-padding>
           <p *ngIf="!currentPeriod">{{ 'TRANSACTIONS_PAGE.NO_RESULTS' | translate }}</p>
           <p *ngIf="currentPeriod" translate>TRANSACTIONS_PAGE.NO_RESULTS_FOR_PERIOD_{{currentPeriod.toUpperCase()}}</p>
-          <p text-wrap>{{ 'TRANSACTIONS_PAGE.SEE_ALL_TRANSACTIONS' | translate }}</p>
-          <p><button no-margin ion-button clear (click)="openSearch()">{{ 'TRANSACTIONS_PAGE.SEARCH_FILTERS' | translate }}</button></p>
+          <p text-wrap>
+            <span class="vertical-align-middle">{{ 'TRANSACTIONS_PAGE.SEE_ALL_TRANSACTIONS' | translate }}</span>
+            <button class="font-size-general vertical-align-middle no-capitalize" no-margin ion-button clear (click)="showAll()">{{ 'TRANSACTIONS_PAGE.SEE_ALL_TRANSACTIONS_LINK' | translate }}</button>
+          </p>
+          <!--<p><button no-margin ion-button clear (click)="openSearch()">{{ 'TRANSACTIONS_PAGE.SEARCH_FILTERS' | translate }}</button></p>-->
         </ion-item>
       </ion-col>
     </ion-row>
