--- a/src/pages/transactions/search/search.html
+++ b/src/pages/transactions/search/search.html
@@ -132,6 +132,7 @@
                 <ion-item no-margin no-padding>
                   <ion-datetime placeholder="{{ 'SEARCH_FILTERS_PAGE.START_DAY' | translate}}" displayFormat="YYYY-MM-DD" pickerFormat="DD MMMM YYYY"
                                 monthNames="{{months[curLang]}}"
+                                max="{{maxYear}}"
                                 cancelText="{{ 'SEARCH_FILTERS_PAGE.CANCEL' | translate}}"
                                 doneText="{{ 'SEARCH_FILTERS_PAGE.DONE' | translate}}"
                                 [(ngModel)]="searchObj.from"></ion-datetime>
@@ -141,6 +142,7 @@
               <ion-col col-6>
                 <ion-item no-margin no-padding>
                   <ion-datetime placeholder="{{ 'SEARCH_FILTERS_PAGE.END_DAY' | translate}}" displayFormat="YYYY-MM-DD" pickerFormat="DD MMMM YYYY"
+                                max="{{maxYear}}"
                                 monthNames="{{months[curLang]}}"
                                 cancelText="{{ 'SEARCH_FILTERS_PAGE.CANCEL' | translate}}"
                                 doneText="{{ 'SEARCH_FILTERS_PAGE.DONE' | translate}}"
