Input type change, autocomplete fix

--- a/src/pages/ticket/ticket-check/ticket-check.html
+++ b/src/pages/ticket/ticket-check/ticket-check.html
@@ -57,7 +57,7 @@
         </ion-label>
 
         <ion-item  no-margin no-padding>
-          <ion-input formControlName="number" type="text"></ion-input>
+          <ion-input formControlName="number" type="number"></ion-input>
         </ion-item>
 
         <ion-label text-wrap class="comment">
