--- a/src/pages/ticket/ticket-check/ticket-check.html
+++ b/src/pages/ticket/ticket-check/ticket-check.html
@@ -26,7 +26,7 @@
       <ion-row>
         <ion-col col-12>
           <ion-item no-margin no-padding [class.has-value]="email.value">
-            <ion-input #email="ngModel" type="email" email placeholder="{{'E_TICKET_PAGE.EMAIL' | translate}}" [(ngModel)]="params.email" (ionBlur)="checkValid(email)"></ion-input>
+            <ion-input #email="ngModel" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\\.[a-z]{2,3}$" placeholder="{{'E_TICKET_PAGE.EMAIL' | translate}}" [(ngModel)]="params.email" (ionBlur)="checkValid(email)"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -57,7 +57,7 @@
         </ion-label>
 
         <ion-item  no-margin no-padding>
-          <ion-input formControlName="number" type="number"></ion-input>
+          <ion-input formControlName="number" type="tel"></ion-input>
         </ion-item>
 
         <ion-label text-wrap class="comment">
