--- a/src/pages/ticket/ticket-check/ticket-check.html
+++ b/src/pages/ticket/ticket-check/ticket-check.html
@@ -10,39 +10,45 @@
 <ion-content>
 
   <div *ngIf="withoutNumber; else withNumber">
-    <ion-grid class="form-group">
-      <ion-row>
-        <ion-col col-6>
-          <ion-item no-margin no-padding>
-            <ion-input type="text" placeholder="{{'E_TICKET_PAGE.FIRSTNAME' | translate}}" [(ngModel)]="params.firstName"></ion-input>
-          </ion-item>
-        </ion-col>
-        <ion-col col-6>
-          <ion-item no-margin no-padding>
-            <ion-input type="text" placeholder="{{'E_TICKET_PAGE.LASTNAME' | translate}}" [(ngModel)]="params.lastName"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col col-12>
-          <ion-item no-margin no-padding [class.has-value]="email.value">
-            <ion-input #email="ngModel" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\\.[a-z]{2,3}$" placeholder="{{'E_TICKET_PAGE.EMAIL' | translate}}" [(ngModel)]="params.email" (ionBlur)="checkValid(email)"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-label text-wrap *ngIf="showedError" class="err-message" no-margin>
-        {{ showedError }}
-      </ion-label>
-      <ion-row>
-        <ion-col col-12 text-wrap id="description">
-          {{'E_TICKET_PAGE.CHECK_MANUALLY_DESC' | translate}}
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <form [formGroup]="withoutNumberForm">
+      <ion-grid>
+        <ion-row>
+          <ion-col col-6>
+            <ion-item no-margin no-padding>
+              <ion-input type="text" formControlName="firstName" placeholder="{{'E_TICKET_PAGE.FIRSTNAME' | translate}}"></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col col-6>
+            <ion-item no-margin no-padding>
+              <ion-input type="text" formControlName="lastName" placeholder="{{'E_TICKET_PAGE.LASTNAME' | translate}}"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-12>
+            <ion-item no-margin no-padding [class.has-value]="withoutNumberForm.get('email').value">
+              <ion-input #email type="text" formControlName="email" placeholder="{{'E_TICKET_PAGE.EMAIL' | translate}}" (keydown)="onKeydown($event)" (ionBlur)="checkValidEmail()"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-label text-wrap *ngIf="showedError" class="err-message" no-margin>
+          {{ showedError }}
+        </ion-label>
+        <ion-row>
+          <ion-col col-12 text-wrap id="description">
+            {{'E_TICKET_PAGE.CHECK_MANUALLY_DESC' | translate}}
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
-    <ion-footer class="position-block-onKeyboard-show">
-      <button [disabled]="email.invalid && email.value && email.touched" class="search-btn form-group" (click)="search()" ion-button block color="primary" text-capitalize>{{'E_TICKET_PAGE.SEARCH' | translate}}</button>
-    </ion-footer>
+
+      <ion-footer class="position-block-onKeyboard-show">
+        <button [disabled]="withoutNumberForm.invalid" class="search-btn form-group" (click)="search()" ion-button block color="primary" text-capitalize>
+          {{'E_TICKET_PAGE.SEARCH' | translate}}
+        </button>
+      </ion-footer>
+
+    </form>
 
   </div>
 
