--- a/src/pages/transactions/params/params.html
+++ b/src/pages/transactions/params/params.html
@@ -35,7 +35,7 @@
     <ion-row class="white-bg" *ngIf="showedInputAffiliateName">
       <ion-col col-12 padding>
         <ion-item mode="ios">
-          <ion-input mode="ios" (ionFocus)="onFocused('affiliate-name')" [(ngModel)]="affiliateName"></ion-input>
+          <ion-input mode="ios" (keydown)="onKeydown($event)" (ionFocus)="onFocused('affiliate-name')" [(ngModel)]="affiliateName"></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
