--- a/src/pages/transactions/search/search.html
+++ b/src/pages/transactions/search/search.html
@@ -73,10 +73,10 @@
             <!--</ion-item>-->
 
             <ion-item no-margin no-padding id="product_id">
-              <ion-input (ionFocus)="onFocused('product_id')" formControlName="product_id" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.PRODUCT_ID' | translate}}"></ion-input>
-              <button ion-button clear icon-only item-right color="dark" style="font-size: 1.4rem; margin: 9px 5px 9px 0" (click)="clearProduct()">
+              <ion-input (ionFocus)="onFocused('product_id')" (keydown)="onKeydown($event)" formControlName="product_id" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.PRODUCT_ID' | translate}}"></ion-input>
+              <a ion-button clear icon-only item-right color="dark" style="font-size: 1.4rem; margin: 9px 5px 9px 0" (click)="clearProduct()">
                 <ion-icon name="ios-close"></ion-icon>
-              </button>
+              </a>
             </ion-item>
 
             <ion-auto-complete id="product-name" #searchbar
@@ -101,12 +101,12 @@
               <ion-row id="full-name">
                 <ion-col col-6>
                   <ion-item no-margin no-padding>
-                    <ion-input (ionFocus)="onFocused('full-name')" formControlName="first_name" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.FIRSTNAME' | translate}}"></ion-input>
+                    <ion-input (keydown)="onKeydown($event)" (ionFocus)="onFocused('full-name')" formControlName="first_name" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.FIRSTNAME' | translate}}"></ion-input>
                   </ion-item>
                 </ion-col>
                 <ion-col col-6>
                   <ion-item no-margin no-padding>
-                    <ion-input (ionFocus)="onFocused('full-name')" formControlName="last_name" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.LASTNAME' | translate}}"></ion-input>
+                    <ion-input (keydown)="onKeydown($event)" (ionFocus)="onFocused('full-name')" formControlName="last_name" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.LASTNAME' | translate}}"></ion-input>
                   </ion-item>
                 </ion-col>
               </ion-row>
