--- a/src/pages/transactions/transaction-details/transaction-details.html
+++ b/src/pages/transactions/transaction-details/transaction-details.html
@@ -52,8 +52,14 @@
       </ng-template>
 
       <ion-grid class="bordered">
+        <ion-row class="border-bottom">
+          <ion-col col-12>
+            <label class="label">{{"TRANSACTION_DETAILS_PAGE.EARNING" | translate}}</label>
+            <p>{{ +transaction.earned_amount | currency: transaction.earned_currency: true }}</p>
+          </ion-col>
+        </ion-row>
         <ion-row>
-          <ion-col col-6>
+          <ion-col col-6 class="border-right">
             <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.GROSS_AMOUNT' | translate }}</label>
             <p>{{ +transaction.brutto | currency: transaction.currency: true }}</p>
           </ion-col>
