--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -34,15 +34,7 @@
     </ion-row>
   </ion-grid>
 
-</ion-header>
-
-<ion-content no-padding>
-
-  <ion-refresher (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content pullingIcon="arrow-dropdown"></ion-refresher-content>
-  </ion-refresher>
-
-  <ion-grid no-padding *ngIf="transactions">
+  <ion-grid no-padding *ngIf="transactions" class="white-bg">
     <ion-row *ngIf="!showedSearchInput;else searchInput">
       <ion-col col-6>
         <button ion-button class="nav-btn" clear color="primary" (click)="sortBy()">{{ 'TRANSACTIONS_PAGE.SORT_BY' | translate }}</button>
@@ -68,6 +60,14 @@
       </ion-row>
     </ng-template>
   </ion-grid>
+
+</ion-header>
+
+<ion-content no-padding>
+
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content pullingIcon="arrow-dropdown"></ion-refresher-content>
+  </ion-refresher>
 
   <ion-item-group *ngIf="transactions && transactions.length;else transactionsNotFound">
     <ion-item-divider class="header" sticky>
